--- a/registracija.html
+++ b/registracija.html
@@ -310,9 +310,79 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+<!-- Firebase SDK (dodaj ovo – bez ovoga nema konekcije) -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js"></script>
 
+<script>
+  // Tvoj Firebase config – KOPIRAJ GA IZ FIREBASE KONZOLE (Project Settings → Your apps → Web app → firebaseConfig)
+  const firebaseConfig = {
+    apiKey: "AIzaSy... (tvoj ključ)",
+    authDomain: "lokalni-plodovi-chat.firebaseapp.com",
+    databaseURL: "https://lokalni-plodovi-chat-default-rtdb.europe-west1.firebasedatabase.app",
+    projectId: "lokalni-plodovi-chat",
+    storageBucket: "lokalni-plodovi-chat.appspot.com",
+    messagingSenderId: "123456789",
+    appId: "1:123456789:web:abcdef123456"
+  };
+
+  // Inicijalizuj Firebase (ovo je najvažnije – bez ovoga nema firebase objekta)
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.database();
+
+  // Registracija – ovo se pokreće kad klikneš submit
+  document.getElementById('registration-form').addEventListener('submit', function(e) {
+    e.preventDefault();
+
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('lozinka').value.trim();
+    const ime = document.getElementById('ime').value.trim();
+    const telefon = document.getElementById('telefon').value.trim();
+    const lokacija = document.getElementById('lokacija').value.trim();
+    const nise = Array.from(document.querySelectorAll('input[name="nise"]:checked')).map(cb => cb.value);
+    const opis = document.getElementById('opis').value.trim();
+
+    if (!email || !password || !ime || !telefon || !lokacija) {
+      alert('Molimo popunite sva obavezna polja!');
+      return;
+    }
+
+    // Kreiraj korisnika u Firebase Auth
+    auth.createUserWithEmailAndPassword(email, password)
+      .then(userCredential => {
+        const user = userCredential.user;
+
+        // Sačuvaj dodatne podatke u Realtime Database
+        db.ref('users/' + user.uid).set({
+          ime: ime,
+          telefon: telefon,
+          lokacija: lokacija,
+          nise: nise,
+          opis: opis,
+          email: email,
+          registeredAt: firebase.database.ServerValue.TIMESTAMP
+        });
+
+        // Sačuvaj u localStorage za brzi pristup (header logika)
+        localStorage.setItem('trenutniKorisnik', JSON.stringify({ uid: user.uid, ime, email }));
+
+        // Pokaži poruku i preusmeri
+        alert('Registracija uspešna! Preusmeravamo na profil...');
+        setTimeout(() => {
+          window.location.href = 'moj-profil.html';
+        }, 1500);
+      })
+      .catch(error => {
+        console.error('Greška pri registraciji:', error);
+        alert('Greška: ' + error.message);
+      });
+  });
+</script>
 </body>
 </html>
+
 
 
 
