--- a/registracija.html
+++ b/registracija.html
@@ -318,13 +318,14 @@ s0.parentNode.insertBefore(s1,s0);
 <script>
   // Tvoj Firebase config – KOPIRAJ GA IZ FIREBASE KONZOLE (Project Settings → Your apps → Web app → firebaseConfig)
   const firebaseConfig = {
-    apiKey: "AIzaSy... (tvoj ključ)",
-    authDomain: "lokalni-plodovi-chat.firebaseapp.com",
-    databaseURL: "https://lokalni-plodovi-chat-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "lokalni-plodovi-chat",
-    storageBucket: "lokalni-plodovi-chat.appspot.com",
-    messagingSenderId: "123456789",
-    appId: "1:123456789:web:abcdef123456"
+    apiKey: "AIzaSyDSgp20xhNEB2poyyxB1uEdsNsXGEzR9Vs",
+    authDomain: : "lokalni-plodovi.firebaseapp.com",
+    databaseURL: "https://lokalni-plodovi-default-rtdb.europe-west1.firebasedatabase.app",
+    projectId: "lokalni-plodovi",
+    storageBucket: "lokalni-plodovi.firebasestorage.app",
+    messagingSenderId: "302190046418",
+    appId: "1:302190046418:web:840ed24ca4307732f7110b",
+    measurementId: "G-XDE6GFM8YY" ,
   };
 
   // Inicijalizuj Firebase (ovo je najvažnije – bez ovoga nema firebase objekta)
@@ -382,6 +383,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 </body>
 </html>
+
 
 
 
