--- a/registracija.html
+++ b/registracija.html
@@ -319,13 +319,13 @@ s0.parentNode.insertBefore(s1,s0);
   // Tvoj Firebase config – KOPIRAJ GA IZ FIREBASE KONZOLE (Project Settings → Your apps → Web app → firebaseConfig)
   const firebaseConfig = {
     apiKey: "AIzaSyDSgp20xhNEB2poyyxB1uEdsNsXGEzR9Vs",
-    authDomain: : "lokalni-plodovi.firebaseapp.com",
-    databaseURL: "https://lokalni-plodovi-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "lokalni-plodovi",
-    storageBucket: "lokalni-plodovi.firebasestorage.app",
-    messagingSenderId: "302190046418",
-    appId: "1:302190046418:web:840ed24ca4307732f7110b",
-    measurementId: "G-XDE6GFM8YY" ,
+  authDomain: "lokalni-plodovi.firebaseapp.com",
+  databaseURL: "https://lokalni-plodovi-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "lokalni-plodovi",
+  storageBucket: "lokalni-plodovi.firebasestorage.app",
+  messagingSenderId: "302190046418",
+  appId: "1:302190046418:web:840ed24ca4307732f7110b",
+  measurementId: "G-XDE6GFM8YY",
   };
 
   // Inicijalizuj Firebase (ovo je najvažnije – bez ovoga nema firebase objekta)
@@ -383,6 +383,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 </body>
 </html>
+
 
 
 
