--- a/registracija.html
+++ b/registracija.html
@@ -316,7 +316,7 @@ s0.parentNode.insertBefore(s1,s0);
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js"></script>
 
 <script>
- <!-- Firebase compat SDK (radi bez module grešaka – isto kao sinoć za chat) -->
+<!-- Firebase compat SDK (radi bez module grešaka – isto kao sinoć za chat) -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -324,14 +324,13 @@ s0.parentNode.insertBefore(s1,s0);
 <script>
   // Tvoj Firebase config (kopiraj iz Firebase konzole – Project Settings → Your apps → Web app → firebaseConfig)
   const firebaseConfig = {
-   apiKey: "AIzaSyDSgp20xhNEB2poyyxB1uEdsNsXGEzR9Vs",
-  authDomain: "lokalni-plodovi.firebaseapp.com",
-  databaseURL: "https://lokalni-plodovi-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "lokalni-plodovi",
-  storageBucket: "lokalni-plodovi.firebasestorage.app",
-  messagingSenderId: "302190046418",
-  appId: "1:302190046418:web:840ed24ca4307732f7110b",
-  measurementId: "G-XDE6GFM8YY",
+    apiKey: "AIzaSy...",
+    authDomain: "lokalni-plodovi-chat.firebaseapp.com",
+    databaseURL: "https://lokalni-plodovi-chat-default-rtdb.europe-west1.firebasedatabase.app",
+    projectId: "lokalni-plodovi-chat",
+    storageBucket: "lokalni-plodovi-chat.appspot.com",
+    messagingSenderId: "123456789",
+    appId: "1:123456789:web:abcdef123456"
   };
 
   firebase.initializeApp(firebaseConfig);
@@ -384,6 +383,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 </body>
 </html>
+
 
 
 
