--- a/registracija.html
+++ b/registracija.html
@@ -324,13 +324,15 @@ s0.parentNode.insertBefore(s1,s0);
 <script>
   // Tvoj Firebase config (kopiraj iz Firebase konzole – Project Settings → Your apps → Web app → firebaseConfig)
   const firebaseConfig = {
-    apiKey: "AIzaSy...",
-    authDomain: "lokalni-plodovi-chat.firebaseapp.com",
-    databaseURL: "https://lokalni-plodovi-chat-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "lokalni-plodovi-chat",
-    storageBucket: "lokalni-plodovi-chat.appspot.com",
-    messagingSenderId: "123456789",
-    appId: "1:123456789:web:abcdef123456"
+      apiKey: "AIzaSyDSgp20xhNEB2poyyxB1uEdsNsXGEzR9Vs",
+  authDomain: "lokalni-plodovi.firebaseapp.com",
+  databaseURL: "https://lokalni-plodovi-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "lokalni-plodovi",
+  storageBucket: "lokalni-plodovi.firebasestorage.app",
+  messagingSenderId: "302190046418",
+  appId: "1:302190046418:web:840ed24ca4307732f7110b",
+  measurementId: "G-XDE6GFM8YY"
+
   };
 
   firebase.initializeApp(firebaseConfig);
@@ -383,6 +385,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 </body>
 </html>
+
 
 
 
