--- a/registracija.html
+++ b/registracija.html
@@ -331,7 +331,7 @@ s0.parentNode.insertBefore(s1,s0);
   storageBucket: "lokalni-plodovi.firebasestorage.app",
   messagingSenderId: "302190046418",
   appId: "1:302190046418:web:840ed24ca4307732f7110b",
-  measurementId: "G-XDE6GFM8YY"
+  measurementId: "G-XDE6GFM8YY",
 
   };
 
@@ -385,6 +385,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 </body>
 </html>
+
 
 
 
