--- a/registracija.html
+++ b/registracija.html
@@ -312,23 +312,21 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 
 <script>
-<!-- Firebase compat SDK (radi bez module grešaka – isto kao sinoć za chat) -->
+<!-- Firebase compat SDK (radi bez module grešaka) -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <script>
-  // Tvoj Firebase config (kopiraj iz Firebase konzole – Project Settings → Your apps → Web app → firebaseConfig)
+  // Tvoj Firebase config (zameni sa pravim)
   const firebaseConfig = {
-      apiKey: "AIzaSyDSgp20xhNEB2poyyxB1uEdsNsXGEzR9Vs",
+   apiKey: "AIzaSyDSgp20xhNEB2poyyxB1uEdsNsXGEzR9Vs",
   authDomain: "lokalni-plodovi.firebaseapp.com",
   databaseURL: "https://lokalni-plodovi-default-rtdb.europe-west1.firebasedatabase.app",
   projectId: "lokalni-plodovi",
   storageBucket: "lokalni-plodovi.firebasestorage.app",
   messagingSenderId: "302190046418",
   appId: "1:302190046418:web:840ed24ca4307732f7110b",
-  measurementId: "G-XDE6GFM8YY",
-
+  measurementId: "G-XDE6GFM8YY"
   };
 
   firebase.initializeApp(firebaseConfig);
@@ -381,6 +379,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 </body>
 </html>
+
 
 
 
