--- a/registracija.html
+++ b/registracija.html
@@ -13,7 +13,14 @@
       --siva: #757575;
       --svetlo: #f8f9f5;
       --belo: #ffffff;
-    }
+   <meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' https://www.gstatic.com https://cdnjs.cloudflare.com 'unsafe-inline' 'unsafe-eval';
+  style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline';
+  connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;
+  img-src 'self' data:;
+">   
+   }
 
     * { margin:0; padding:0; box-sizing:border-box; }
 
@@ -379,6 +386,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 </body>
 </html>
+
 
 
 
