--- a/registracija.html
+++ b/registracija.html
@@ -317,7 +317,7 @@ s0.parentNode.insertBefore(s1,s0);
 
 <script>
   // Zameni sa tvojim ključevima (kopiraj iz Supabase konzole)
-  const supabaseUrl = sb_publishable_kQK5uwXgU89JW2f81Ez68w_35bSwFMv;  // Tvoj URL
+  const supabaseUrl = 'https://smpbjhrafmxgqjpgxsbf.supabase.co';  // Tvoj URL
   const supabaseKey = 'sb_publishable_kt62uzZKTy9KdH6dxnLteQ_oCvy6Hkp';  // Tvoj anon key
   const supabase = Supabase.createClient(supabaseUrl, supabaseKey);
 
@@ -365,6 +365,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 </body>
 </html>
+
 
 
 
