--- a/login.html
+++ b/login.html
@@ -240,60 +240,51 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-<!-- Supabase SDK -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
 <script>
-  // Zameni sa tvojim ključevima (kopiraj iz Supabase konzole)
-  const supabaseUrl = 'https://smpbjhrafmxgqjpgxsbf.supabase.co';  // Tvoj URL
-  const supabaseKey = 'sb_publishable_kt62uzZKTy9KdH6dxnLteQ_oCvy6Hkp';  // Tvoj anon key
-  const supabase = Supabase.createClient(supabaseUrl, supabaseKey);
-
-  document.getElementById('registration-form').addEventListener('submit', async function(e) {
+  // Pretpostavljam da tvoja forma izgleda otprilike ovako (prilagoditi id-ove ako su drugačiji!)
+  document.getElementById('login-form').addEventListener('submit', async function(e) {
     e.preventDefault();
 
-    const email = document.getElementById('email').value.trim();
-    const password = document.getElementById('lozinka').value.trim();
-    const ime = document.getElementById('ime').value.trim();
-    const telefon = document.getElementById('telefon').value.trim();
-    const lokacija = document.getElementById('lokacija').value.trim();
-    const nise = Array.from(document.querySelectorAll('input[name="nise"]:checked')).map(cb => cb.value);
-    const opis = document.getElementById('opis').value.trim();
+    const email    = document.getElementById('email').value.trim();
+    const lozinka  = document.getElementById('lozinka').value;
+    const poruka   = document.getElementById('poruka') || document.createElement('p');
 
-    if (!email || !password || !ime || !telefon || !lokacija) {
-      alert('Molimo popunite sva obavezna polja!');
+    if (!email || !lozinka) {
+      poruka.textContent = 'Unesi email i lozinku!';
+      poruka.style.color = 'red';
       return;
     }
 
-    const { data, error } = await supabase.auth.signUp({
-      email,
-      password,
-      options: {
-        data: {
-          ime,
-          telefon,
-          lokacija,
-          nise,
-          opis
-        }
-      }
+    poruka.textContent = 'Prijava u toku...';
+    poruka.style.color = 'black';
+
+    const { data, error } = await supabase.auth.signInWithPassword({
+      email: email,
+      password: lozinka
     });
 
     if (error) {
-      alert('Greška: ' + error.message);
+      poruka.textContent = error.message;  // npr. "Invalid login credentials" ili "Email not confirmed"
+      poruka.style.color = 'red';
       console.error(error);
-      return;
-    }
+    } else {
+      poruka.style.color = 'green';
+      poruka.textContent = 'Uspešno prijavljen! Preusmeravam...';
 
-    alert('Registracija uspešna! Preusmeravamo na profil...');
-    setTimeout(() => {
-      window.location.href = 'moj-profil.html';
-    }, 1500);
+      // Sačuvaj korisnika lokalno (opciono, za brzu proveru)
+      localStorage.setItem('userLoggedIn', 'true');
+      localStorage.setItem('userEmail', email);
+
+      setTimeout(() => {
+        window.location.href = 'moj-profil.html';  // ili gde god hoćeš da ide posle logina
+      }, 1500);
+    }
   });
 </script>
 </body>
 
 </html>
+
 
 
 
